# BaiTapOOP

Bai1/: Presentation1.pptx
Bai1/Bai1/: CMakeLists.txt  engineer.cpp  engineer.h  main.cpp  managerofficer.cpp  managerofficer.h  officer.cpp  officer.h  staff.cpp  staff.h  worker.cpp  worker.h
Bai1/build-Bai1-Desktop_Qt_6_3_1_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
Bai10/Bai10/: CMakeLists.txt  document.cpp  document.h  document.h.autosave  main.cpp
Bai10/build-Bai10-Desktop_Qt_6_3_1_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  build.ninja  cmake_install.cmake
Bai11/Bai11/: CMakeLists.txt  complexnumber.cpp  complexnumber.h  main.cpp
Bai11/build-Bai11-Desktop_Qt_6_3_1_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  build.ninja  cmake_install.cmake
Bai12/Bai12/: CMakeLists.txt  car.cpp  car.h  main.cpp  managervehicle.cpp  managervehicle.h  motorbike.cpp  motorbike.h  truck.cpp  truck.h  vehicle.cpp  vehicle.h
Bai12/build-Bai12-Desktop_Qt_6_3_1_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
Bai13/Bai13/: CMakeLists.txt  certificate.cpp  certificate.h  employee.cpp  employee.h  employeemanagement.cpp  employeemanagement.h  experience.cpp  (+6 more)
Bai2/: Presentation1.pptx
Game_Caro/: Presentation1.pptx
bai13_hieu/Bai13/: CMakeLists.txt  Certificate.cpp  Certificate.h  Employee.cpp  Employee.h  Experience.cpp  Experience.h  Fresher.cpp  Fresher.h  Intern.cpp  Intern.h  ManagerEmployee.cpp  ManagerEmployee.h  main.cpp
(+752 files in other folders)
